# ztpir

./: .gitignore
app/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  mise.toml
app/.sqlx/: query-1a333e6fcdeb180674c9c174daffce1e44c17eb0ac140f87a6b15b8ceb6c0957.json  query-9c21b10ddb652c19f65be3395c4887e3b98b667b5b0dc1ee6d4c0fd3c27e1072.json  query-fa5a3d53bb0f87ed925b72806589963c87a10a23b9fa3dc6ef0d5219ab41e4a4.json
app/config/: base.yaml  default.yaml  local.yaml  production.yaml
app/migrations/: 20260707184430_create_subscriptions_table.sql
app/src/: configuration.rs  domain.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
app/src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
app/src/routes/: health_check.rs  subscriptions.rs
app/tests/: health_check.rs
app/tests/api/: health_check.rs  helpers.rs  subscriptions.rs
zero2prod/: .gitignore  Cargo.toml  README.md  mise.toml
zero2prod/src/: main.rs
ztpir/: .gitignore  Cargo.toml  README.md  mise.toml
ztpir/.cargo/: config.toml
ztpir/src/: configuration.rs  lib.rs  main.rs  startup.rs
ztpir/src/routes/: subscriptions.rs
ztpir/tests/: health_check.rs
