[package]
name = "app"
version = "0.1.0"
edition = "2024"

[lints.rust]
warnings = "deny"

[dependencies]
actix-web = "4.14.0"
config = "0.15.25"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
sqlx = {
    version = "0.9.0",
    default-features = false,
    features = [
        "chrono",
        "macros",
        "migrate",
        "postgres",
        "runtime-tokio",
        "tls-rustls",
        "uuid",
    ]
}
tracing = { version = "0.1.44" }
tracing-actix-web = { version = "0.7.22", features = ["uuid_v7"] }
tracing-bunyan-formatter = { version = "0.3.10" }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
unicode-segmentation = "1.13.3"
uuid = { version = "1.23.4", features = ["v4", "v7"] }

[dev-dependencies]
reqwest = "0.13.4"
