[package]
name = "ztpir"
version = "0.1.0"
edition = "2024"

[lints.rust]
warnings = "deny"

[dependencies]
actix-web = "4.14.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", default-features = false, features = ["tls-rustls", "postgres"] }

[dev-dependencies]
reqwest = "0.13.4"
